upd ui finish simple data table

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ofetch": "^1.4.1",
     "pinia": "^2.3.0",
     "radix-vue": "^1.9.12",
+    "reka-ui": "^2.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vue": "^3.5.13",
@@ -47,5 +48,6 @@
     "vite": "^6.0.5",
     "vite-plugin-vue-devtools": "^7.6.8",
     "vue-tsc": "^2.1.10"
-  }
+  },
+  "packageManager": "pnpm@10.3.0+sha512.ee592eda8815a8a293c206bb0917c4bb0ff274c50def7cbc17be05ec641fc2d1b02490ce660061356bd0d126a4d7eb2ec8830e6959fb8a447571c631d5a2442d"
 }
