--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.21",
     "lodash.clonedeep": "^4.5.0",
     "lucide-vue-next": "^0.469.0",
+    "motion-v": "^0.13.1",
     "ofetch": "^1.4.1",
     "pinia": "^2.3.0",
     "radix-vue": "^1.9.12",
