--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
     "lodash.clonedeep": "^4.5.0",
-    "lucide-vue-next": "^0.469.0",
+    "lucide-vue-next": "^0.525.0",
     "motion-v": "^0.13.1",
     "ofetch": "^1.4.1",
     "pinia": "^2.3.0",
     "radix-vue": "^1.9.12",
-    "reka-ui": "^2.0.0",
-    "tailwind-merge": "^2.6.0",
+    "reka-ui": "^2.3.2",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.3.5",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
